[gd_scene load_steps=6 format=3 uid="uid://c5bwgcd6qakrh"]

[ext_resource type="Script" path="res://Menus/RoundInformation/NewAdaptationInformation/new_adaptation_information.gd" id="1_idobm"]
[ext_resource type="Texture2D" uid="uid://bru1ov8ut3x3a" path="res://Menus/UpgradeSelectionMenu/UpgradeOption/Upgrade Box 1.png" id="2_x0ayr"]
[ext_resource type="Texture2D" uid="uid://bnu7ashmt28b4" path="res://Player/Upgrades/Player Upgrade Button.png" id="3_w7kdl"]
[ext_resource type="Texture2D" uid="uid://c4mwjq8jwfkrt" path="res://Player/Upgrades/Meta/Lucky Dice.png" id="4_xxh5y"]

[sub_resource type="LabelSettings" id="LabelSettings_34yda"]
font_size = 24

[node name="NewAdaptionInformation" type="Control"]
custom_minimum_size = Vector2(317, 400)
layout_mode = 3
anchors_preset = 0
offset_right = 317.0
offset_bottom = 400.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_idobm")

[node name="BG" type="Sprite2D" parent="."]
texture = ExtResource("2_x0ayr")
centered = false

[node name="UpgradeHex" type="Sprite2D" parent="."]
position = Vector2(158, 130)
texture = ExtResource("3_w7kdl")

[node name="UpgradeIcon" type="Sprite2D" parent="UpgradeHex"]
texture = ExtResource("4_xxh5y")

[node name="AdaptationNameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_right = 128.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "Adaptation Name"
label_settings = SubResource("LabelSettings_34yda")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AdaptationDescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 50.0
offset_right = 128.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
text = "Adaptation description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
